--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "private": true,
   "dependencies": {
     "axios": "^0.17.1",
+    "bootstrap": "^4.0.0-alpha.6",
     "react": "^16.2.0",
     "react-confirm-alert": "^1.0.8",
     "react-dom": "^16.2.0",
+    "react-modal": "^3.1.11",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.0",
     "react-transition-group": "^1.2.1",
