--- a/package.json
+++ b/package.json
@@ -5,14 +5,24 @@
   "dependencies": {
     "axios": "^0.17.1",
     "bootstrap": "^4.0.0-alpha.6",
+    "multer": "^1.3.0",
     "react": "^16.2.0",
+    "react-bootstrap": "^0.32.1",
     "react-confirm-alert": "^1.0.8",
     "react-dom": "^16.2.0",
-    "react-modal": "^3.1.11",
+    "react-modal": "^3.1.13",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.0",
     "react-transition-group": "^1.2.1",
     "reactstrap": "^4.8.0"
+  },
+  "proxy": {
+    "/api/*": {
+      "target": "http://localhost:8081"
+    },
+    "/auth/google": {
+      "target": "http://localhost:8081"
+    }
   },
   "scripts": {
     "start": "react-scripts start",
